--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
               <option value="4">Thailand</option>
               <option value="5">Vietnam</option>
               <option value="6">Angkas</option>
+              <option value="7">Singapore 2</option>
+              <option value="8">Indonesia 2</option>
+              <option value="9">Malaysia 2</option>
+              <option value="10">Myanmar 2</option>
             </select>
           </div>
 
